centered the email

--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
         .wrapper {
             max-width: 500px;
             height: 780px;
+            margin: 0 auto;
+
         }
 
         .backgroundImage {
