--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
         <tbody class="mainContainer">
             <p style="mso-line-height-rule:exactly;" class="main">
                 Start a new Thanksgiving tradition with your family at The Keg, and
-                enjoy a <span>3-course dinner</span> dinner for only $27.
+                enjoy a <span>3-course dinner</span> for only $27.
             </p>
             <p style="mso-line-height-rule:exactly;" class="buttonContainer">
                 <a href="https://www.kegsteakhouse.com/#!/locations/#siteContent" class="button">CLICK HERE TO RESERVE
