--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
             width: 100%;
             display: flex;
             justify-content: center;
+            margin: 0.8rem 0;
         }
 
         .button {
@@ -135,6 +136,7 @@
             width: 100%;
             display: flex;
             justify-content: center;
+            margin-bottom: 0.2rem;
         }
 
         .logo {
